src/action/backup.css
#backup-panel {
  font-size: 15px;
}

#backup-panel section {
  padding: 8px;
}

#backup-panel section label {
  display: block;
}

#backup-panel section textarea {
  font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;
  font-size: smaller;
  resize: none;
}

#backup-panel section fieldset,
#backup-panel section [role="alert"] {
  margin-block-start: 7.5px;
}

